--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,11 @@ cache:
 script:
     - npm run lint
     - npm run test
+
+notifications:
+  irc:
+    channels:
+      - "chat.freenode.net#my-channel"
+      - "chat.freenode.net#some-other-channel"
+    on_success: change # default: always
+    on_failure: always # default: always
