--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,17 @@
 language: node_js
 node_js:
     - "8.10.0"
+
+before_install:
+  - npm i -g npm
+
 install:
-    - npm install
-# keep the npm cache around to speed up installs
+    - npm ci
+    
 cache:
-    directories:
-        - "$HOME/.npm"
+  directories:
+    - "node_modules"
+
 script:
     - npm run lint
     - npm run test
