--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
+dist: trusty
 language: node_js
 node_js:
     - "8.10.0"
+
+addons:
+  chrome: stable
 
 before_install:
   - npm i -g npm
 
 install:
     - npm ci
-    
+
 cache:
   directories:
     - "node_modules"
@@ -15,6 +19,13 @@ cache:
 script:
     - npm run lint
     - npm run test
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start" # the starting the virtual X frame buffer: Xvfb process
+  - sleep 3 #wait a while before xvfb to start
+after_script:
+  - "sh -e /etc/init.d/xvfb stop"
 
 notifications:
   irc:
